# CommonEx

./: README.md
source/: CMakeLists.txt
source/CommonEx/: CMakeLists.txt
source/CommonEx/private/: Async.cpp  CommonEx.cpp  Crypt.cpp  Database.cpp  SMath.cpp
source/CommonEx/public/: Async.h  Buffer.h  CommonEx.h  ConnectionEndpoint.h  Core.h  Crypt.h  DQueue.h  Diag.h  EntityId.h  Map.h  Memory.h  MemoryManager.h  Misc.h  Opcode.h  Packet.h  PacketBuilder.h  Platform.h  PriorityQueue.h  Ptr.h  Queue.h  RStatus.h  SMath.h  SMathSSE.h  ServerController.h  Store.h  Stream.h  System.h  TObjectPool.h  TStructures.h  Task.h  TransportLayer.h  Tunning.h  TypeTraits.h  Utils.h  Win32Platform.h  Work.h  Worker.h
source/CommonEx/public/AsyncDispatcher/: AsyncDispatcher.h  AsyncTask.h
source/CommonEx/public/Database/: Adaptor.h
source/examples/: CMakeLists.txt
source/examples/async dispatcher usage/: CMakeLists.txt
source/examples/async dispatcher usage/private/: main.cpp
source/examples/asyncIO/: CMakeLists.txt  README.md
source/examples/basic usage/: CMakeLists.txt  README.md
source/examples/basic usage/private/: main.cpp
source/examples/basic usage/public/: Example.h
source/examples/connection/: CMakeLists.txt  README.md
source/examples/controller usage/: CMakeLists.txt
source/examples/controller usage/private/: main.cpp
source/examples/memory/: CMakeLists.txt  README.md
source/examples/memory/private/: main.cpp
source/examples/packets/: CMakeLists.txt  README.md
source/examples/packets/private/: main.cpp
source/examples/packets/public/: Example.h
source/examples/system usage/: CMakeLists.txt
source/examples/task/: CMakeLists.txt  README.md
source/examples/task/private/: main.cpp
source/examples/task/public/: Example.h
source/examples/worker/: CMakeLists.txt  README.md
source/examples/worker/private/: main.cpp
source/fmt/: CMakeLists.txt
source/fmt/include/fmt/: core.h
source/fmt/src/: format.cc  os.cc
source/tests/test/: CMakeLists.txt  README.md
